Archive2/a6/bcdae6cc36ab41/output
+ g++-4.8 -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp: In function ‘int main(int, char**)’:
main.cpp:17:13: error: assignment of read-only location ‘y.X::x.Y::r()’
     y.x.r() = 3;
             ^
